deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
spec:
  replicas: 2
  selector:
      matchLabels:
        app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 2
  selector:
      matchLabels:
        app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
